[package]
name = "cppdoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clang = "2.0.0"
clap = { version = "4.5.21", features = ["derive"] }
glob = "0.3.1"
indicatif = "0.17.9"
lazy_static = "1.5.0"
pulldown-cmark = { version = "0.13.0", default-features = false, features = [
    "html",
] }
pygmentize = "0.2.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tempfile = "3.14.0"
tera = "1.20.0"
toml = "0.8.19"

[profile.release]
lto = true
